fix gap between header elements in flexbox exercise 3

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -15,6 +15,7 @@ body {
   padding: 8px;
   display: flex;
   justify-content: space-between;
+  gap: 16px;
 }
 
 .profile-image {
@@ -38,6 +39,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  min-width: 0px;
 }
 
 a {
